--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "elo-rating": "^1.0.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
